# mystock

./: .gitignore  .tmp_baostock_login_stack.txt  .tmp_is_trading_day_stack.txt  .tmp_rdns_false.txt  README.md  findings.md  main.py  plot_symbol.py  progress.md  pyproject.toml  requirements.txt  scan_patterns.py  task_plan.md  track_stock.xlsx  tradingview.md  主线.md  四个模式.md  日线交易指标与事件买卖点框架_v2.xlsx  纪律.md  选股-日中.md  选股-盘中.md  选股.md
config/: default.yaml
docs/: intraday-picks-writing-guide.md  picks-writing-guide.md  项目详细说明.md
reports/: intraday_channel_smoke_20260508_132415.json  intraday_channel_smoke_20260508_132434.json  intraday_channel_smoke_20260508_132604.json  patterns_1_2026-04-10_plotcheck.csv  patterns_2_2026-04-10_check.csv  patterns_all_2026-04-10.csv
tests/: test_akshare_provider.py  test_baostock_provider.py  test_cli.py  test_daily_screening.py  test_daily_screening_backtest.py  test_event_risk_ranker.py  test_exit_rule_optimization.py  test_features.py  test_full_market_panel.py  test_full_market_tail_risk.py  test_indicators.py  test_intraday_ranking.py  test_intraday_screening.py  test_intraday_update.py  test_itick_provider.py  test_labels.py  test_lgbm_utils.py  test_macd_divergence.py  test_ml_dataset.py  test_ml_evaluation.py  test_ml_models.py  test_pattern_backtest.py  test_pattern_scan.py  test_pattern_stop_research.py  test_pattern_tradingview_scores.py  test_position_sizing.py  test_probability_workflow.py  test_project_stock_picker.py  test_route_watchlists.py  test_runcmd.py  test_sector_leaders.py  test_sector_membership.py  (+22 more)
(+802 files in other folders)
