[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "a-share-analyzer"
version = "0.1.0"
description = "A-share technical analysis CLI for main board stock screening."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "akshare>=1.18.40",
  "baostock>=0.8.9",
  "matplotlib>=3.8.0",
  "pandas>=2.2.0",
  "pyarrow>=16.0.0",
  "PyYAML>=6.0.1",
]

[project.scripts]
stocks-analyzer = "stocks_analyzer.cli:main"
mystock = "stocks_analyzer.cli:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
